FEKing can now be done localy with FEKL and you can new FEK multiple directories and files at once + cleanup of base file var names